--- a/.gitignore
+++ b/.gitignore
@@ -678,3 +678,5 @@ fabric.properties
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,rider,visualstudiocode,visualstudio
+
+.idea/
