--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -5,6 +5,17 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageVersion>0.9.0</PackageVersion>
+        <Title>clmath</Title>
+        <Authors>comroid</Authors>
+        <Description>A commandline math tool</Description>
+        <PackageProjectUrl>https://github.com/comroid-git/clmath</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/comroid-git/clmath/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/comroid-git/clmath</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <AssemblyVersion>0.9.0</AssemblyVersion>
+        <FileVersion>10</FileVersion>
+        <NeutralLanguage>en-150</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
