--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -20,6 +20,8 @@
 
     <ItemGroup>
       <PackageReference Include="Antlr4.Runtime.Standard" Version="4.11.1" />
+      <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
+      <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
     </ItemGroup>
 
 </Project>
