--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -16,6 +16,7 @@
         <AssemblyVersion>0.9.0</AssemblyVersion>
         <FileVersion>10</FileVersion>
         <NeutralLanguage>en-150</NeutralLanguage>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
