--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -21,6 +21,8 @@
 
     <ItemGroup>
       <PackageReference Include="Antlr4.Runtime.Standard" Version="4.11.1" />
+      <PackageReference Include="glm" Version="0.9.9.800" />
+      <PackageReference Include="GlmSharp" Version="0.9.8" />
       <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
       <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
     </ItemGroup>
