--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -17,19 +17,26 @@
         <FileVersion>10</FileVersion>
         <NeutralLanguage>en-150</NeutralLanguage>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <ApplicationIcon>..\icon.png</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Antlr4.Runtime.Standard" Version="4.11.1"/>
-        <PackageReference Include="Silk.NET.Input" Version="2.16.0"/>
-        <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0"/>
-        <PackageReference Include="Silk.NET.Windowing" Version="2.16.0"/>
+        <PackageReference Include="Antlr4.Runtime.Standard" Version="4.11.1" />
+        <PackageReference Include="Silk.NET.Input" Version="2.16.0" />
+        <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
+        <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Content Include="Assets\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="..\icon.png">
+        <Link>icon.png</Link>
+      </None>
     </ItemGroup>
 
 </Project>
