--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -17,7 +17,7 @@
         <FileVersion>10</FileVersion>
         <NeutralLanguage>en-150</NeutralLanguage>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <ApplicationIcon>..\icon.png</ApplicationIcon>
+        <ApplicationIcon>..\icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -34,6 +34,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Include="..\icon.ico">
+        <Link>icon.ico</Link>
+      </None>
       <None Include="..\icon.png">
         <Link>icon.png</Link>
       </None>
