add antlr build tool

--- a/clmath/clmath.csproj
+++ b/clmath/clmath.csproj
@@ -22,9 +22,20 @@
 
     <ItemGroup>
         <PackageReference Include="Antlr4.Runtime.Standard" Version="4.11.1" />
+        <PackageReference Include="Antlr4BuildTasks" Version="11.5.0" />
         <PackageReference Include="Silk.NET.Input" Version="2.16.0" />
         <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
         <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Antlr4 Include="../Math.g4">
+            <Generator>MSBuild:Compile</Generator>
+            <Package>clmath.Antlr</Package>
+            <LibPath>../</LibPath>
+            <Listener>False</Listener>
+            <Visitor>True</Visitor>
+        </Antlr4>
     </ItemGroup>
 
     <ItemGroup>
